--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,10 @@
     <meta name="description" content="Mapping template">
     <meta name="generator" content="Hugo 0.79.0">
     <title>Mapping Template · EstateWatch.london</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
-
     
 
     <!-- Bootstrap core CSS -->
-<link href="dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -32,7 +29,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="dist/css/starter-template.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/dist/css/starter-template.css" rel="stylesheet">
   </head>
   <body>
     
@@ -71,7 +68,7 @@
 </main><!-- /.container -->
 
 
-    <script src="dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ site.baseurl }}/dist/js/bootstrap.bundle.min.js"></script>
 
       
   </body>
