--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,10 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item active">
-          <a class="nav-link" aria-current="page" href="#">Map</a>
+          <a class="nav-link" aria-current="page" href="{{ site.baseurl }}">Map</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="list.html">List</a>
+          <a class="nav-link" href="{{ site.baseurl }}/list.html">List</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
