--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,10 @@
 </nav>
 
 <main class="container">
+  
+  {% if page.category == 'estates' %}
+{% include carousel.html %}
+{% endif %}
 
  {{ content }}
 
