--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Estate Watch Mapping Template</a>
+    <a class="navbar-brand" href="{{ site.baseurl }}">ESTATE WATCH Mapping Template</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
